# mcp-repo-template

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  pyproject.toml  release-please-config.json  ruff.toml
.github/workflows/: ci.yml  release.yml
src/mcp_server_template/: __init__.py  exceptions.py  server.py  tools.py
tests/: __init__.py  test_tools.py
