[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.2"
description = "A local MCP server for <SERVICE> — integration for Claude"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/stevesimpson418/mcp-repo-template"
Issues = "https://github.com/stevesimpson418/mcp-repo-template/issues"
Changelog = "https://github.com/stevesimpson418/mcp-repo-template/releases"

[project.scripts]
mcp-server-template = "mcp_server_template.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
